opencli-rs/tui/src/chatwidget/snapshots/opencli_tui__chatwidget__tests__approvals_selection_popup@windows_degraded.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2003
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)             OpenCLI can read files in the current
                                     workspace. Approval is required to edit
                                     files or access the internet.
  2. Default (non-elevated sandbox)  OpenCLI can read and edit files in the
                                     current workspace, and run commands.
                                     Approval is required to access the
                                     internet or edit other files. (Identical
                                     to Agent mode)
  3. Full Access                     OpenCLI can edit files outside this
                                     workspace and access the internet without
                                     asking for approval. Exercise caution
                                     when using.

  The non-elevated sandbox protects your files and prevents network access under
  most circumstances. However, it carries greater risk if prompt injected. To
  upgrade to the elevated sandbox, run /setup-elevated-sandbox.
  Press enter to confirm or esc to go back
